[gd_scene load_steps=2 format=3 uid="uid://fhg4vtogb7p2"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_fn0dj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fn0dj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -33.0
offset_right = 82.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.48, 0.48)

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitBtn")
text = "Play Game"

[node name="HelpBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayBtn")
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpBtn" to="." method="_on_help_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
